changing a github link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </a>
           </li>
           <li>
-            <a href="https://github.com/VBarrientosa" target="_blank"
+            <a href="https://github.com/vbarrientos97" target="_blank"
               ><img src="images/github.png" alt="GitHub"
             />
             <p class="social-link-text">GitHub</p></a>
